@@ -79,13 +79,8 @@ int __stdcall cygwin_strncasecmp (const char *, const char *, size_t);
 #define strcasematch(s1,s2)	(!cygwin_strcasecmp ((s1),(s2)))
 #define strncasematch(s1,s2,n)	(!cygwin_strncasecmp ((s1),(s2),(n)))
 
-#undef strlwr
-#define strlwr cygwin_strlwr
-char * __stdcall cygwin_strlwr (char *);
-
-#undef strupr
-#define strupr cygwin_strupr
-char * __stdcall cygwin_strupr (char *);
+char *strlwr (char *);
+char *strupr (char *);
 
 #endif /* __INSIDE_CYGWIN__ */
 
